# models/user.models.js
@@ -29,87 +29,58 @@ const USER_MODELS = {
     return result;
   },
 
-  createUser: async (data) => {
-    const { name, email, password, identity_type, identity_number, street, city, state, postal_code, country, company_name, position } = data;
+  updateUserProfile: async (userId, profileData) => {
+    const { identity_type, identity_number, street, city, state, postal_code, country, company_name, position } = profileData;
 
-    const result = await prisma.users.create({
-      data: {
-        name,
-        email,
-        password,
-        profile: {
-          create: {
-            identity_type,
-            identity_number,
-            address: {
-              create: {
-                street,
-                city,
-                state,
-                postal_code,
-                country,
-              },
-            },
-            job: {
-              create: {
-                company_name,
-                position,
-              },
-            },
-          },
-        },
-      },
-      include: {
-        profile: {
-          include: {
-            address: true,
-            job: true,
-          },
-        },
-      },
-    });
-    return result;
-  },
-
-  updateUser: async (id, data) => {
-    const { name, email, password, identity_type, identity_number, street, city, state, postal_code, country, company_name, position } = data;
-    const result = await prisma.users.update({
-      where: { id },
-      data: {
-        name,
-        email,
-        password,
-        profile: {
+    const result = await prisma.profiles.upsert({
+      where: { user_id: userId },
+      update: {
+        identity_type,
+        identity_number,
+        address: {
           update: {
-            identity_type,
-            identity_number,
-            address: {
-              update: {
-                street,
-                city,
-                state,
-                postal_code,
-                country,
-              },
-            },
-            job: {
-              update: {
-                company_name,
-                position,
-              },
-            },
+            street,
+            city,
+            state,
+            postal_code,
+            country,
           },
+        },
+        job: {
+          update: {
+            company_name,
+            position,
+          },
+        },
+      },
+      create: {
+        identity_type,
+        identity_number,
+        address: {
+          create: {
+            street,
+            city,
+            state,
+            postal_code,
+            country,
+          },
+        },
+        job: {
+          create: {
+            company_name,
+            position,
+          },
+        },
+        user: {
+          connect: { id: userId },
         },
       },
       include: {
-        profile: {
-          include: {
-            address: true,
-            job: true,
-          },
-        },
+        address: true,
+        job: true,
       },
     });
+
     return result;
   },
 
