# routes/api/v1/user/index.js
@@ -5,7 +5,6 @@ const USER_CONTROLLER = require("../../../../controllers/user.controller");
 
 router.get("/", USER_CONTROLLER.getAllUser);
 router.get("/:id", USER_CONTROLLER.getDetailUser);
-router.post("/", USER_CONTROLLER.createUser);
 router.put("/:id", USER_CONTROLLER.updateUser);
 router.delete("/:id", USER_CONTROLLER.deleteUser);
 
